fixing typo factor transformation mistake

--- a/006_marketing_report_2/001_marketing_report_part-2.qmd
+++ b/006_marketing_report_2/001_marketing_report_part-2.qmd
@@ -48,7 +48,7 @@ bike_sales <- bike_sales |>
                                 ordered = FALSE),
          bikeshop.city = factor(x = bikeshop.city,
                                 ordered = FALSE),
-         bikeshop.state = factor(x = bikeshop.name,
+         bikeshop.state = factor(x = bikeshop.state,
                                  ordered = FALSE),
          product.id = factor(x = product.id,
                              ordered = FALSE),
