--- a/009_marketing_report_3/001_marketing_report_part-3.qmd
+++ b/009_marketing_report_3/001_marketing_report_part-3.qmd
@@ -23,6 +23,8 @@ library(tidyverse)
 library(scales)
 library(tidymodels)
 library(DT)
+library(parameters)
+library(tidyheatmaps)
 ```
 
 # Modeling
@@ -272,69 +274,55 @@ customer_product_table <- bike_sales_total_revenue_pct |>
 
 ### Performing k-means clustering
 
-The objective of this section is to apply the k-means clustering technique by grouping the bike shops
+Bla bla bla 
 
--   First using the function `n_clusters` from the package `parameters` on the customer-product table to identify the number of clusters to use for k-means
+Pending number of optimal clusters
 
 ```{r}
-# Follow this template to identify the number of clusters to use in k-means
-
-# library(parameters)
-
-# n_clusters_customer_product_table <- customer_product_table |> 
-#   select(-bikeshop.name) |> 
-#   n_clusters(standardize = FALSE,
-#              nbclust_method = "kmeans")
-
-# n_clusters_customer_product_table
-
-# If you want, you can check the 
-# criteria or methods used to select 
-# the number of clusters to use in kmeans
-# This part is optional
-
-# n_clusters_customer_product_table |> 
-#   as_tibble()
+#| warning: false
+n_clusters_customer_product_table <- customer_product_table |> 
+  select(-bikeshop.name) |> 
+  n_clusters(
+    standardize = FALSE,
+    nbclust_method = "kmeans",
+    n_max = 10
+  )
 ```
 
-
-Use the `kmeans` function with the argument `centers` equal to the number of clusters identify above and applying it to the customer product table
-
--   Remember to use `set.seed` to fix the initial centers. For example, you can use `set.seed(seed = 1234)`  
-
--   Remember that `kmeans` only works with numerical data so you will need to drop the `bikeshop.name` from the customer product table
-
-    -   Checkout `?kmeans` and the argument `x` in relation to this aspect
-
--   Once you have apply the k-means clustering technique save this object as `kmeans_object`
+Pending
 
 ```{r}
-# Follow this template to apply k-means
-# to the customer-product table
-
-# set.seed(seed = 1234)
-# kmeans_object <- customer_product_table |> 
-#   select(-bikeshop.name) |> 
-#   kmeans(centers = 4)
+set.seed(1234)
+kmeans_object <- customer_product_table |> 
+  select(-bikeshop.name) |> 
+  kmeans(
+    centers = 4, 
+    algorithm = "Hartigan-Wong" 
+  )
 ```
 
 #### Extracting the cluster assignment
 
-Now that you have apply the k-means clustering technique you are going to extract the clusters and assign them to each bike shop
-
-You are going to use the `glance` function from the `tidymodels` library to extract the cluster assignment and select the bike shop names and the clusters to obtain the information required by the marketing team
+Pending
 
 ```{r}
-# Follow this template to obtain the relevant information
-# required by the marketing team
+#| label: tbl-clusters
+#| tbl-cap: Bikeshop clusters using kmeans
 
-# clusters <- kmeans_object |> 
-#   augment(data = customer_product_table) |> 
-#   select(bikeshop.name, .cluster)
+clusters <- kmeans_object |> 
+  augment(
+    data = customer_product_table
+  ) |> 
+  select(
+    bikeshop.name,
+    .cluster
+  )
 
-## You can check the data using
-### clusters |> glimpse()
-### clusters |> count(.cluster)
+clusters |> 
+  datatable(
+    colnames = c("Bikeshop",
+                 "Cluster") 
+      )
 ```
 
 ### Data visualization with k-means clustering and principal component analysis
@@ -364,21 +352,50 @@ pca_1_2 <- pca_object$x |>
 
 #### Cluster visualization using k-means and principal component analysis
 
-Using the information about the cluster assignment and the 2 principal components consolidate these parts into a tibble to generate a plot and visualize the clusters using the 2 dimensional projection
+Pending
 
 ```{r}
-# Follow this template to visualize the fill clusters
+#| label: fig-pca-clusters
+#| fig-cap: Dimensionality reduction using principal component analysis and segmentation using k-means of bikeshops
 
-# clusters_pca_1_2 <- pca_1_2 |> 
-#   bind_cols(clusters)
+clusters_pca_1_2 <- pca_1_2 |> 
+  bind_cols(clusters)
 
-# clusters_pca_1_2 |> 
-#   ggplot() + 
-#   geom_point(aes(x = PC1, 
-#                  y = PC2,
-#                  color = .cluster))
-
-## Improve the plot by adding labels to the x, y axis 
-## and a title to explain the visualization to the
-## marketing team
+clusters_pca_1_2 |> 
+  ggplot() +
+  geom_point(
+    aes(x = PC1,
+        y = PC2,
+        color = .cluster)
+  ) + 
+  labs(x = "Principal component 1",
+       y = "Principal component 2",
+       color = "Cluster")
 ```
+
+```{r}
+#| fig-height: 12
+#| fig-width: 7
+customer_product_table_clusters <- kmeans_object |> 
+  augment(
+    data = customer_product_table
+  )  
+
+customer_product_table_clusters |>
+  select(-.cluster) |> 
+  pivot_longer(
+    cols = -bikeshop.name, 
+    names_to = "model",
+    values_to = "revenue_pct"
+  ) |> 
+  tidyheatmap(
+    rows = model,
+    columns = bikeshop.name,
+    values = revenue_pct,
+    cluster_rows = TRUE,
+    cluster_cols = TRUE,
+    clustering_method = "complete",
+    border_color = "black"
+  )
+```
+
